--- a/request.html
+++ b/request.html
@@ -25,7 +25,7 @@
                 placeholder="원하시는 제품을 작성해주세요 베스트 댓글 시 3개월 기준 해당 브랜드에 제안합니다..."></textarea>
             <button class="btn btn-primary" onclick="postComment()">제출하기</button>
 
-            <h5 class="mt-4">Top Comments</h5>
+            <h5 class="mt-4">베스트 댓글</h5>
             <ul id="comments-list" class="list-group mt-3">
                 <!-- Comments will be dynamically added here -->
             </ul>
