--- a/request.html
+++ b/request.html
@@ -24,7 +24,7 @@
             <h4>상품 이름 입력</h4>
             <textarea id="comment-input" class="form-control mb-2"
                 placeholder="원하시는 제품을 작성해주세요 베스트 댓글 시 3개월 기준 해당 브랜드에 제안합니다..." 
-                style="content, width: 50px; height: 50px;"></textarea>
+                style="content width: 300px; height: 50px;"></textarea>
             <button class="btn btn-primary" onclick="postComment()">제출하기</button>
 
             <h5 class="mt-4">베스트 댓글</h5>
