--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </button>
                 <div class="navbar-collapse collapse justify-content-end mt-2" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <!-- 회원가입 링크 수정 -->
+                        <!-- 회원가입 링크 수정 2-->
                         <li class="nav-item">
                             <a class="nav-link" href="signup.html">회원가입</a>
                         </li>
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="bid.html">광고주 등록</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="request.html">요청합니다</a>
+                            <a class="nav-link" href="#testimonials">요청합니다</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">문의하기</a>
@@ -62,26 +62,23 @@
             <div class="col text-center mt-3 mb-1">
                 <button type="button" class="btn btn-outline-Secondary" onclick="filterProducts(1000001)">1,000,000
                     ~</button>
+                    
             </div>
         </div>
     </div>
-
     <!-- 상품 리스트 -->
-    <div class="container mt-5 ">
+    <div class="container mt-5">
         <div id="product-list">
             <!-- 상품 항목은 자바스크립트를 통해 동적으로 추가됩니다 -->
         </div>
     </div>
 
-
-
-    <!-- Firebase JS SDK -->
-    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- JavaScript 파일 연결 -->
     <script src="index.js"></script>
-    <script src="comments.js"></script> <!-- This is the new script for handling comments -->
 </body>
 
 </html>
