--- a/index.html
+++ b/index.html
@@ -51,17 +51,21 @@
     <!-- 가격대별 버튼 -->
     <div class="container text-center mt-1 mb-1">
         <div class="row">
-            <div class="col text-center mt-3 mb-1 ">
-                <button type="button" class="btn btn-outline-Secondary" onclick="filterProducts(300000)">~
-                    300,000</button>
-            </div>
-            <div class="col text-center mt-3 mb-1">
-                <button type="button" class="btn btn-outline-Secondary" onclick="filterProducts(1000000)">300,000 ~
-                    1,000,000</button>
-            </div>
-            <div class="col text-center mt-3 mb-1">
-                <button type="button" class="btn btn-outline-Secondary" onclick="filterProducts(1000001)">1,000,000
-                    ~</button>
+
+
+                    <div class="container text-center mt-1 mb-1">
+                        <div class="row">
+                            <div class="col text-center mt-3 mb-1">
+                                <a href="price-under-300k.html" class="btn btn-outline-Secondary">~ 300,000</a>
+                            </div>
+                            <div class="col text-center mt-3 mb-1">
+                                <a href="price-under-1000k.html" class="btn btn-outline-Secondary">300,000 ~ 1,000,000</a>
+                            </div>
+                            <div class="col text-center mt-3 mb-1">
+                                <a href="price-under-1000k~.html" class="btn btn-outline-Secondary">1,000,000 ~</a>
+                            </div>
+                        </div>
+                    </div>
                     
             </div>
         </div>
