--- a/bid.html
+++ b/bid.html
@@ -30,6 +30,88 @@
 
     <!-- JavaScript 파일 연결 -->
     <script src="bid.js"></script>
+
+    <!-- JavaScript to Dynamically Load 100 Products -->
+    <script>
+        // 상품 데이터를 저장하는 배열
+        const products = Array.from({ length: 100 }, (_, i) => ({
+            rank: i + 1,
+            imageSrc: `./images/${(i + 1) % 10 === 0 ? 10 : (i + 1) % 10}.jpg`, // 로드한 이미지들 순서대로 반복 사용
+            name: `상품명 ${i + 1}`,
+            brand: '브랜드명',
+            originalPrice: (Math.floor(Math.random() * 100) + 1) * 10000, // 랜덤 원가 설정
+            discountedPrice: (Math.floor(Math.random() * 100) + 1) * 10000 * 0.8, // 원가에서 20% 할인된 가격
+            discount: '20%',
+            reviews: `리뷰 ${Math.floor(Math.random() * 500)}개`
+        }));
+
+        // 첫 번째 상품 이미지 수동 설정
+        products[0].imageSrc = './images/1.jpg';
+
+        let loadedProducts = 0; // 이미 로드된 상품 수
+        const productsPerLoad = 20; // 한 번에 로드할 상품 수
+
+        // 상품 목록을 동적으로 추가하는 함수
+        function loadProducts() {
+            const productList = document.getElementById('bid-list');
+            
+            // 초기 로드 시 기존의 모든 콘텐츠 제거
+            if (loadedProducts === 0) {
+                productList.innerHTML = ''; // Clear any existing products
+            }
+
+            // 상품들을 한 번에 로드할 수 있도록 행(row) 생성
+            let row;
+            for (let i = loadedProducts; i < Math.min(loadedProducts + productsPerLoad, products.length); i++) {
+                if (i % 5 === 0) { // 5개씩 새로운 행(row) 생성
+                    row = document.createElement('div');
+                    row.className = 'row justify-content-center mb-4';
+                    productList.appendChild(row);
+                }
+
+                const product = products[i];
+                const productItem = document.createElement('div');
+                productItem.className = 'col-6 col-md-4 col-lg-2 mb-4';
+
+                productItem.innerHTML = `
+                    <div class="product-item border p-3">
+                        <div class="product-rank">${product.rank}</div>
+                        <img src="${product.imageSrc}" class="img-fluid mb-2" alt="상품 이미지">
+                        <h5 class="product-name">${product.name}</h5>
+                        <p class="product-brand">${product.brand}</p>
+                        <p class="product-price"><span class="original-price">${product.originalPrice.toLocaleString('ko-KR')}원</span> <span
+                                class="discounted-price text-danger">${product.discountedPrice.toLocaleString('ko-KR')}원</span></p>
+                        <p class="product-discount">${product.discount}</p>
+                        <p class="product-reviews">${product.reviews}</p>
+                        <button class="btn btn-primary btn-block mt-2">입찰하기</button>
+                        <button class="btn btn-secondary btn-block mt-2">홍보하기</button>
+                    </div>
+                `;
+
+                row.appendChild(productItem);
+            }
+
+            loadedProducts += productsPerLoad; // 현재까지 로드된 상품 수 업데이트
+
+            // 상품이 모두 로드되었는지 확인
+            if (loadedProducts >= products.length) {
+                window.removeEventListener('scroll', handleScroll); // 스크롤 이벤트 리스너 제거
+            }
+        }
+
+        // 스크롤이 페이지 하단에 도달했을 때 더 많은 상품을 로드하는 함수
+        function handleScroll() {
+            if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 10) { // 오차를 줄이기 위해 -10 사용
+                loadProducts();
+            }
+        }
+
+        // 페이지가 로드될 때 처음 20개의 상품을 로드
+        document.addEventListener('DOMContentLoaded', () => {
+            loadProducts(); // 초기 상품 로드
+            window.addEventListener('scroll', handleScroll); // 스크롤 이벤트 리스너 추가
+        });
+    </script>
 </body>
 
 </html>
