--- a/price-under-1000k.html
+++ b/price-under-1000k.html
@@ -10,12 +10,28 @@
 </head>
 
 <body>
+    <!-- "All events" Link at the Top -->
+    <div class="container mt-3 text-center">
+        <h2>
+            <a href="index.html" class="text-dark" style="text-decoration: none;">All events</a>
+        </h2>
+    </div>
+
+    <!-- Search Box under "All events" -->
+    <div class="container mt-3 text-center">
+        <form id="search-form" class="form-inline justify-content-center">
+            <input type="text" id="search-input" class="form-control mr-2" placeholder="Search products...">
+            <button type="button" class="btn btn-primary" onclick="searchProducts()">Search</button>
+        </form>
+    </div>
+
     <div class="container mt-5">
         <h1 class="display-4 text-center">300,000 ~ 1,000,000원 이하 상품</h1>
         <div id="product-list" class="row justify-content-center">
             <!-- Products will be dynamically added here -->
         </div>
     </div>
+
     <!-- Firebase JS SDK -->
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
@@ -35,7 +51,7 @@
         }));
 
         // Filter products with discounted price between 300,000 and 1,000,000 원
-        const filteredProducts = products.filter(product => product.discountedPrice >= 300000 && product.discountedPrice <= 1000000);
+        let filteredProducts = products.filter(product => product.discountedPrice >= 300000 && product.discountedPrice <= 1000000);
 
         function loadProducts() {
             const productList = document.getElementById('product-list');
@@ -63,7 +79,18 @@
                 productList.appendChild(productItem);
             });
         }
-        
+
+        // Search Functionality
+        function searchProducts() {
+            const searchInput = document.getElementById('search-input').value.toLowerCase();
+            filteredProducts = products.filter(product => 
+                product.discountedPrice >= 300000 && product.discountedPrice <= 1000000 &&
+                (product.name.toLowerCase().includes(searchInput) || 
+                 product.brand.toLowerCase().includes(searchInput))
+            );
+            loadProducts(); // Reload products based on search
+        }
+
         // Load the filtered products when the page loads
         document.addEventListener('DOMContentLoaded', loadProducts);
     </script>
